<resources>
    <string name="app_name">בדרכי שלי</string>

    <string name="channel_name">MSW</string>
    <string name="channel_description">Used for MSW notifications</string>
    <string name="example_notification">set alarm for notificaiton</string>
    <string name="notifiaction_activity_title">תזכורת</string>
    <string name="rehab_reminder_activity_title">תזכורת שירותים</string>
    <string name="medicine_reminder_activity_title">תזכורת תרופה</string>

    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>

    <string name="notification_navigation_title">שיעור %1$s</string>
    <string name="notification_navigation_text">%2$s, בוא נצא לשיעור %1$s!</string>
    <string name="login">התחבר</string>

    <string name="username_empty_error_message">אנא הזן שם משתמש</string>
    <string name="password_empty_error_message">אנא הזן סיסמה</string>
    <string name="invalid_login">שם משתמש או סיסמה שגויים</string>
    <string name="no_class">אין שיעור כרגע</string>
    <string name="back_button_description">Back button</string>
    <string name="day_schedule_title">סדר היום שלי</string>
    <string name="settings_title">הגדרות</string>
    <string name="inactive_screen">מחוץ לזמני הפעילות</string>
    <string name="lesson_image">Lesson Image</string>
    <string name="user_error">נא להזין שם משתמש</string>
    <string name="pass_error">נא להזין סיסמה</string>
    <string name="login_error_title">שם משתמש ו/או סיסמה לא תקינים. אנא נסה שוב.</string>
    <string name="login_error_general">לא הצלחנו להכניס אותך למערכת. אנא נסה שוב.</string>
    <string name="settings_activity">הגדרות</string>
    <string name="settings_alerts_key">alerts</string>
    <string name="settings_sound_key">sound</string>
    <string name="settings_logout_key">logout</string>
    <string name="settings_alerts_title">התראות</string>
    <string name="settings_sound_title">הנחיות קוליות</string>
    <string name="settings_logout_title">יציאה מהמערכת</string>
    <string name="settings_alerts_summary">הדלק או כבה את ההתראות</string>
    <string name="settings_sound_summary">הדלק או כבה את הניווט הקולי</string>
    <string name="settings_logout_summary">לחץ כדי לצאת מהמערכת</string>
    <string name="navigation_image">navigation image</string>
    <string name="password_title">סיסמה</string>
    <string name="navPasswordButtonText">שלח</string>
    <string name="navigation_destinations_title">לאן הולכים עכשיו?</string>
    <string name="pin_action_description">pin action</string>
    <string name="time_for_medicine">הגיע הזמן לקחת תרופה</string>
    <string name="time_for_rehab">הגיע הזמן ללכת לשירותים</string>
    <string name="time_for_lesson">%1$s</string>
    <string name="scheduleErrorToast">לא מתאפשר להציג כרגע את מערכת השעות</string>
    <string name="app_logo">App logo</string>
    <string name="userPassword_label">סיסמה</string>
    <string name="loginButton_text">כניסה למערכת</string>
    <string name="userName_label">שם משתמש</string>
    <string name="button_okText">אישור</string>
    <string name="logoutDialog_test">האם אתה בטוח שברצונך\n לצאת מהמערכת?</string>
    <string name="confirmationDialog_cancelText">ביטול</string>
    <string name="wc_text">שירותים</string>
    <string name="schedule">סדר היום שלי</string>
    <string name="user_prefix_text">שלום</string>
    <string name="settings_navigation">ניווט יזום</string>
    <string name="generalErrorDialog_cancelText">סגירה</string>
    <string name="generalErrorDialog_text">אופס, ארעה תקלה</string>
    <string name="toilet">Toilet</string>
    <string name="medicine">medicine</string>
    <string name="avatar">avatar</string>
</resources>
