<android.support.v7.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="navigation_category"
        app:title="">

        <Preference
            app:key="navigation"
            app:title="@string/settings_navigation"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="settings_category"
        app:title="">

        <SwitchPreferenceCompat
            app:key="@string/settings_alerts_key"
            app:title="@string/settings_alerts_title"/>

        <SwitchPreferenceCompat
            app:key="@string/settings_sound_key"
            app:title="@string/settings_sound_title"/>

        <Preference
            app:key="@string/settings_logout_key"
            app:title="@string/settings_logout_title"/>

    </PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
