<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4dp"
            android:text="@string/logoutDialog_test"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="63dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginStart="29dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/login_button"
                android:text="@string/confirmationDialog_cancelText"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/approveButton"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginEnd="29dp"
                android:background="@drawable/login_button"
                android:text="@string/button_okText"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>