<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/generalErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4dp"
            android:textDirection="rtl"
            android:layoutDirection="rtl"
            android:textColor="@color/errorDialog_textColor"
            android:text="@string/generalErrorDialog_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="116dp"
            android:src="@drawable/error_avatar"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/avatar" />

        <FrameLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/closeButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/login_button"
                android:text="@string/generalErrorDialog_cancelText"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/loginButtonShadow"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/nav_login_button_lower_layer" />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>