<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".ui.navigation.NavigationPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:titleTextColor="@color/colorToolbarText">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp">

            <ImageView
                android:id="@+id/backImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/back_button_description"
                android:gravity="right"
                android:onClick="onBackClick"
                android:src="@drawable/back" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        tools:context=".ui.navigation.NavigationPasswordActivity">

        <ImageView
            android:id="@+id/nav_password_img"
            android:layout_width="89dp"
            android:layout_height="78dp"
            android:layout_marginTop="95dp"
            android:gravity="top|center_horizontal"
            android:lineSpacingExtra="4dp"
            android:src="@drawable/nav_password_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/settingsTitle"
            style="@style/ABTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:fontFamily="VarelaRound"
            android:gravity="center"
            android:text="@string/password_title"
            android:textColor="@color/navPassword"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/nav_password_edit_text"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
        android:inputType="numberPassword"
            android:lines="1"
            android:textColor="@color/navPassword"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="240dp"
            android:layout_height="62dp"
            android:layout_marginTop="22dp">

            <Button
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:background="@drawable/nav_login_button_upper_layer"
                android:fontFamily="VarelaRound"
                android:onClick="onSendButtonClick"
                android:radius="10dp"
                android:text="@string/navPasswordButtonText"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <View
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/nav_login_button_lower_layer" />
        </FrameLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
